@@ -35,5 +35,6 @@ iCode *iCodeLabelOptimize (iCode *);
 eBBlock *iCode2eBBlock (iCode * ic);
 int switchAddressSpacesOptimally (iCode *ic, ebbIndex *ebbi);
 const symbol *getAddrspaceiCode (const iCode *ic);
+void switchAddressSpaceAt (iCode *ic);
 
 #endif
